tests/baselines/reference/destructuringPropertyParameters4.errors.txt
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters4.ts(24,24): error TS2339: Property 'x' does not exist on type 'C2'.
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters4.ts(24,34): error TS2339: Property 'y' does not exist on type 'C2'.
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters4.ts(24,44): error TS2339: Property 'z' does not exist on type 'C2'.


==== tests/cases/conformance/es6/destructuring/destructuringPropertyParameters4.ts (3 errors) ====
    
    class C1<T, U, V> {
        constructor(private k: T, protected [a, b, c]: [T,U,V]) {
            if ((b === undefined && c === undefined) || (this.b === undefined && this.c === undefined)) {
                this.a = a || k;
            }
        }
    
        public getA() {
            return this.a
        }
    
        public getB() {
            return this.b
        }
    
        public getC() {
            return this.c;
        }
    }
    
    class C2 extends C1<number, string, boolean> {
        public doSomethingWithSuperProperties() {
            return `${this.x} ${this.y} ${this.z}`;
                           ~
!!! error TS2339: Property 'x' does not exist on type 'C2'.
                                     ~
!!! error TS2339: Property 'y' does not exist on type 'C2'.
                                               ~
!!! error TS2339: Property 'z' does not exist on type 'C2'.
        }
    }
    